--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      <a href="https://miiaramo.medium.com/">Medium</a>
+      <a href="https://miiaramo.medium.com/">View my content on Medium</a>
     </header>
 
     <main id="content" class="main-content" role="main">
@@ -42,6 +42,7 @@
 
       <footer class="site-footer">
           <span class="site-footer-contact">Contact: <a href="miia.ramo@icloud.com">miia.ramo@icloud.com</a></span>
+          <br>
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
