--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,13 @@
     <meta name="theme-color" content="#660066">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <img src="miiaramo.png" alt="Avatar">
   </head>
   <body>
     <!-- <a id="skip-to-content" href="#content">Skip to the content.</a> -->
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ <!--page.title--> site.title | default: site.github.repository_name }}</h1>
+      <img src="../miiaramo.png" alt="Avatar">
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
