--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,6 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ <!--page.title--> site.title | default: site.github.repository_name }}</h1>
-      <img src="../miiaramo.png" alt="Avatar">
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
@@ -36,6 +35,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
       <a href="https://miiaramo.medium.com/">View my content on Medium</a>
+      <img src="../miiaramo.png" alt="Avatar" width="100" height="100">
     </header>
 
     <main id="content" class="main-content" role="main">
