--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,13 @@
       <a href="https://miiaramo.medium.com/">View my content on Medium</a>
       <img src="../miiaramo.png" alt="Avatar" width="100" height="100">
     </header>
+    
+    <div class="navbar">
+      <a href="#" class="active">Home</a>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+      <a href="#" class="right">Link</a>
+    </div>
 
     <main id="content" class="main-content" role="main">
       {{ content }}
