--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,24 @@
       <a href="#" class="right">Link</a>
     </div>
 
-    <main id="content" class="main-content" role="main">
-      {{ content }}
-
+    
+    <div class="row">
+      <div class="side">
+        <h2>About Me</h2>
+        <h5>Photo of me:</h5>
+        <div class="fakeimg" style="height:200px;">Image</div>
+        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+        <h3>More Text</h3>
+        <p>Lorem ipsum dolor sit ame.</p>
+        <div class="fakeimg" style="height:60px;">Image</div><br>
+        <div class="fakeimg" style="height:60px;">Image</div><br>
+        <div class="fakeimg" style="height:60px;">Image</div>
+      </div>
+      <div class="main">
+        <main id="content" class="main-content" role="main">
+          {{ content }}
+      </div>
+    </div>
       <footer class="site-footer">
           <span class="site-footer-credits">Contact: <a href="miia.ramo@icloud.com">miia.ramo@icloud.com</a></span>
           <br>
