--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,3 +54,11 @@ However, for these versions the navbar will inherit default position */
   background-color: #f1f1f1;
   padding: 20px;
 }
+/* Main column */
+.main {   
+  -ms-flex: 70%; /* IE10 */
+  flex: 70%;
+  background-color: white;
+  padding: 20px;
+}
+
