--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -35,24 +35,19 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
       <a href="https://miiaramo.medium.com/">View my content on Medium</a>
-      <img src="../miiaramo.png" alt="Avatar" width="100" height="100">
+      <!--<img src="../miiaramo.png" alt="Avatar" width="100" height="100">-->
     </header>
     
     <div class="navbar">
       {% for page in site.pages %}
         <a href={{ page.filename }}>{{ page.title }}</a>
       {% endfor %}
+      <a href="https://miiaramo.medium.com/">Medium</a>
     </div>
-   
-    <div class="row">
-      <div class="side">
-        <h2>About Me</h2>
-      </div>
-      <div class="main">
-        <main id="content" class="main-content" role="main">
+    
+    <main id="content" class="main-content" role="main">
           {{ content }}
-      </div>
-    </div>
+
       <footer class="site-footer">
           <span class="site-footer-credits">Contact: <a href="miia.ramo@icloud.com">miia.ramo@icloud.com</a></span>
           <br>
