--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -23,6 +23,12 @@
   </head>
   <body>
     <!-- <a id="skip-to-content" href="#content">Skip to the content.</a> -->
+     <div class="navbar">
+      {% for page in site.pages %}
+        <a href={{ page.filename }}>{{ page.title }}</a>
+      {% endfor %}
+      <a href="https://miiaramo.medium.com/" class="right">Medium</a>
+    </div>
 
     <header class="page-header" role="banner">
       <h1 class="project-name">Miia Rämö</h1>
@@ -37,13 +43,7 @@
       <a href="https://miiaramo.medium.com/">View my content on Medium</a>
       <!--<img src="../miiaramo.png" alt="Avatar" width="100" height="100">-->
     </header>
-    
-    <div class="navbar">
-      {% for page in site.pages %}
-        <a href={{ page.filename }}>{{ page.title }}</a>
-      {% endfor %}
-      <a href="https://miiaramo.medium.com/">Medium</a>
-    </div>
+   
     
     <main id="content" class="main-content" role="main">
           {{ content }}
