--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,7 +34,7 @@ However, for these versions the navbar will inherit default position */
   background-color: #ff9999;
   color: black;
 }
-.header {
+.page-header {
   background: linear-gradient(to right, #660066 0%, #ff9999 100%);
 }
 
