--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,22 +1,7 @@
 ---
 ---
+$section-headings-color: #660066;
 @import "{{ site.theme }}";
-* {
-  box-sizing: border-box;
-}
-body {
-  padding: 0;
-  margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: $body-text-color;
-h2 {
-  color: #660066;
-}
-h3 {
-  color: #660066;
-}
 img {
   border-radius: 50%;
   width: 200px;
