--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -42,10 +42,18 @@
       {% endif %}
       <!--<img src="../miiaramo.png" alt="Avatar" width="100" height="100">-->
     </header>
-   
     
-    <main id="content" class="main-content" role="main">
+    <div class="row">
+      <div class="side">
+        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
+        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
+        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
+      </div>
+      <div class="main">
+        <main id="content" class="main-content" role="main">
           {{ content }}
+      </div>
+    </div>
 
       <footer class="site-footer">
           <span class="site-footer-credits">Contact: <a href="miia.ramo@icloud.com">miia.ramo@icloud.com</a></span>
