--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -24,8 +24,8 @@
   <body>
     <!-- <a id="skip-to-content" href="#content">Skip to the content.</a> -->
      <div class="navbar">
-      <a href={{ index.filename }}>{{ index.title }}</a>
-      <a href={{ cv.filename }}>{{ cv.title }}</a>
+      <a href=index>About me</a>
+      <a href=cv>CV</a>
       {% endfor %}
       <a href="https://miiaramo.medium.com/" class="right">Medium</a>
     </div>
