--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -28,6 +28,7 @@
       <a href=cv>CV</a>
       {% endfor %}
       <a href="https://miiaramo.medium.com/" class="right">Medium</a>
+      <a href="https://www.linkedin.com/in/miiaramo/ class="right">LinkedIn</a>
     </div>
 
     <header class="page-header" role="banner">
