--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,8 +57,8 @@ However, for these versions the navbar will inherit default position */
 }
 /* Main column */
 .main {   
-  -ms-flex: 70%; /* IE10 */
-  flex: 70%;
+  /*-ms-flex: 70%; 
+  flex: 70%;*/
   background-color: white;
 }
 
