--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -43,17 +43,18 @@
       <!--<img src="../miiaramo.png" alt="Avatar" width="100" height="100">-->
     </header>
     
-    <div class="row">
-      <div class="side">
-        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
-        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
-        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
-      </div>
+    
       <div class="main">
         <main id="content" class="main-content" role="main">
           {{ content }}
       </div>
-    </div>
+                                                           
+     <div class="images">
+        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
+        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
+        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
+      </div>
+
 
       <footer class="site-footer">
           <span class="site-footer-credits">Contact: <a href="miia.ramo@icloud.com">miia.ramo@icloud.com</a></span>
