--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -48,13 +48,20 @@
         <main id="content" class="main-content" role="main">
           {{ content }}
       </div>
-                                                           
-     <div class="images">
-        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
-        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
-        <img src="../miiaramo.png" alt="Avatar" width="100" height="100"><br>
+                                                          
+                                                                                                                                
+      <div class="row">
+        <div class="column">
+          <img src="../miiaramo.png" alt="Selfie" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="../miiaramo.png" alt="Selfie" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="../miiaramo.png" alt="Selfie" style="width:100%">
+        </div>
       </div>
-
+                                                                        
 
       <footer class="site-footer">
           <span class="site-footer-credits">Contact: <a href="miia.ramo@icloud.com">miia.ramo@icloud.com</a></span>
