--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,15 +50,12 @@ However, for these versions the navbar will inherit default position */
   -ms-flex-wrap: wrap; /* IE10 */
   flex-wrap: wrap;
 }
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.images {
-  background-color: white;
-  padding: 20px;
+.row {
+  display: flex;
 }
-/* Main column */
-.main {   
-  background-color: white;
-  padding: 20px;
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
 }
 
