--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -47,20 +47,22 @@
       <div class="main">
         <main id="content" class="main-content" role="main">
           {{ content }}
+        <div class="row">
+          <div class="column">
+            <img src="../miiaramo.png" alt="Picture of Miia" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="../saaristo.jpg" alt="Picture of Miia in Finnish archipelago" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="../ibi.jpg" alt="Picture of Miia with a horse" style="width:100%">
+        </div>
+      </div>                                                      
+                                                          
       </div>
                                                           
                                                                                                                                 
-      <div class="row">
-        <div class="column">
-          <img src="../miiaramo.png" alt="Selfie" style="width:100%">
-        </div>
-        <div class="column">
-          <img src="../miiaramo.png" alt="Selfie" style="width:100%">
-        </div>
-        <div class="column">
-          <img src="../miiaramo.png" alt="Selfie" style="width:100%">
-        </div>
-      </div>
+      
                                                                         
 
       <footer class="site-footer">
