--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -27,7 +27,7 @@
       <a href=index>About me</a>
       <a href=cv>CV</a>
       <a href="https://miiaramo.medium.com/" class="right">Medium</a>
-      <a href="https://www.linkedin.com/in/miiaramo/ class="right">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/miiaramo/" class="right">LinkedIn</a>
     </div>
 
     <header class="page-header" role="banner">
