--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -31,7 +31,7 @@
     </div>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">Miia Rämö</h1>
+      <h1 class="project-name"> </h1>
       <!--<h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>-->
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
@@ -40,7 +40,6 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      <!--<img src="../miiaramo.png" alt="Avatar" width="100" height="100">-->
     </header>
     
     
