--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,8 +13,8 @@ It is positioned relative until a given offset position is met in the viewport -
 The sticky value is not supported in IE or Edge 15 and earlier versions. 
 However, for these versions the navbar will inherit default position */
 .navbar {
-  /*overflow: hidden;*/
-  background-color: #660066;
+  overflow: hidden;
+  background: linear-gradient(to right, #660066 0%, #ff9999 100%);
   position: sticky;
   position: -webkit-sticky;
   top: 0;
